added exception filter to standardize error responses

--- a/wallet-service/tsconfig.json
+++ b/wallet-service/tsconfig.json
@@ -21,6 +21,7 @@
       "@test/*": ["./test/*"],
       "@helpers/*": ["./src/helpers/*"],
       "@infra/*": ["./src/infra/*"],
+      "@errors/*": ["./src/errors/*"],
       "@transactions/*": ["./src/transactions/*"]
     },
     "resolveJsonModule": true
