--- a/wallet-service/package.json
+++ b/wallet-service/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "^5.7.0",
