--- a/wallet-service/docker-compose.yml
+++ b/wallet-service/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.9"
 
 services:
+  wallet-app:
+    build: .
+    container_name: wallet-app
+    depends_on:
+      - database-wallet
+    ports:
+      - 3001:3001
+    env_file:
+      - ./.env
+    networks:
+      - ilia-network
+
   database-wallet:
     image: postgres
     container_name: database-wallet
