--- a/users-service/tsconfig.json
+++ b/users-service/tsconfig.json
@@ -17,6 +17,13 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@test/*": ["./test/*"],
+      "@helpers/*": ["./src/helpers/*"],
+      "@infra/*": ["./src/infra/*"],
+      "@errors/*": ["./src/errors/*"],
+      "@users/*": ["./src/users/*"]
+    },
     "resolveJsonModule": true
   }
 }
