--- a/users-service/docker-compose.yml
+++ b/users-service/docker-compose.yml
@@ -2,19 +2,18 @@ version: "3.9"
 
 services:
   database-users:
-    image: mongo
-    container_name: database-users
+    image: bitnami/mongodb:5.0.17
+    volumes:
+      - mongodb_data:/bitnami/mongodb
     ports:
       - 27017:27017
     env_file:
       - ./.env
-    volumes:
-      - mongodbdata:/data/db
     networks:
       - ilia-network
 
 volumes:
-  mongodbdata:
+  mongodb_data:
     driver: local
 
 networks: 
