added dockerfile and updated docker compose to run app on container

--- a/users-service/docker-compose.yml
+++ b/users-service/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.9"
 
 services:
+  users-app:
+    build: .
+    container_name: users-app
+    depends_on:
+      - database-users
+    ports:
+      - 3002:3002
+    env_file:
+      - ./.env
+    networks:
+      - ilia-network
+
   database-users:
     image: bitnami/mongodb:5.0.17
     volumes:
